objects/DMAPP__Segmentation_Unit_Answer__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Segmentation Unit Answers</relationshipLabel>
        <relationshipName>Segmentation_Unit_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Question_Option__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Segmentation Question Option</label>
        <referenceTo>DMAPP__DM_Segmentation_Question_Option__c</referenceTo>
        <relationshipLabel>Segmentation Unit Answers</relationshipLabel>
        <relationshipName>Segmentation_Unit_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Segmentation Unit Answer</label>
    <nameField>
        <label>Segmentation Unit Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Unit Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>